# ocpf-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
openspec/changes/add-github-releases/: tasks.md
openspec/changes/archive/2026-07-22-add-filer-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-add-filer-command/specs/filer-lookup/: spec.md
openspec/changes/archive/2026-07-22-create-ocpf-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-create-ocpf-cli/specs/cli-foundation/: spec.md
openspec/changes/archive/2026-07-22-create-ocpf-cli/specs/race-summary/: spec.md
openspec/changes/archive/2026-07-23-add-github-releases/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-add-github-releases/specs/packaging/: spec.md
openspec/changes/archive/2026-07-23-add-version-flag/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-add-version-flag/specs/cli-foundation/: spec.md
openspec/changes/archive/2026-07-23-package-and-publish/: design.md  tasks.md
openspec/changes/archive/2026-07-23-package-and-publish/specs/packaging/: spec.md
openspec/changes/archive/2026-07-23-race-historical-finsummaries/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-race-historical-finsummaries/specs/race-summary/: spec.md
openspec/changes/create-ocpf-cli/: tasks.md
openspec/changes/package-and-publish/: proposal.md  tasks.md
openspec/specs/cli-foundation/: spec.md
openspec/specs/filer-lookup/: spec.md
openspec/specs/packaging/: spec.md
openspec/specs/race-summary/: spec.md
src/ocpf_cli/: __init__.py  api.py  cli.py  districts.py  legislative.py  render.py
src/ocpf_cli/commands/: __init__.py  filer.py  race.py
tests/: test_api.py  test_cli.py  test_districts.py  test_filer.py  test_legislative.py  test_race.py  test_render.py
