[project]
name = "ocpf"
dynamic = ["version"]
description = "An opinionated command-line interface to the OCPF (Massachusetts campaign finance) API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Brent Benson", email = "bwbensonjr@gmail.com" },
]
keywords = [
    "ocpf",
    "campaign-finance",
    "massachusetts",
    "politics",
    "elections",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/bwbensonjr/ocpf-cli"
Repository = "https://github.com/bwbensonjr/ocpf-cli"
Issues = "https://github.com/bwbensonjr/ocpf-cli/issues"

[project.scripts]
ocpf = "ocpf_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ocpf_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
